# promptcachedb

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  fly.toml  pyproject.toml
app/: main.py
benchmarking_analysis/: analysis.ipynb
experiments/: prompt_cache_to_disk.ipynb
src/demo/: __init__.py  __main__.py
src/promptcachedb/: __init__.py  cache_pipeline.py  client.py  on_disk_cache.py
