[project]
name = "promptcachedb"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "BEW111", email = "bewilliams111@gmail.com" }]
dependencies = [
    "transformers>=4.45.2",
    "torch>=2.4.1",
    "requests>=2.32.3",
    "fastapi[standard]>=0.115.2",
]
readme = "README.md"
requires-python = ">= 3.12"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = ["mypy>=1.11.2", "types-requests"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/promptcachedb"]
